test/invalid/baseline/stray-slash.txt
Syntax error at line 2 in stray-slash.widl:
/ This is not.
^ Unrecognised tokens
